# Databases

Lesson5/Task1/: CMakeLists.txt
Lesson5/Task1/inc/: clients_db.h
Lesson5/Task1/src/: clients_db.cpp  main.cpp
Lesson6/Task1/: CMakeLists.txt
Lesson6/Task1/inc/: book.h  books_service_db.h  publisher.h  sale.h  shop.h  stock.h
Lesson6/Task1/src/: books_service_db.cpp  main.cpp
